welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:13: error: type mismatch;
 found   : Unit
 required: Boolean
      if (a<0){
      ^posNeg:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (negative){
  ^